fix horizontal scroll/white margin  on mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,4 @@
 .aboutMeSection {
-  width: 100%;
   padding: 20px;
   font-size: 1.2em;
   background-color: white;
