--- a/src/components/PortfolioList/PortfolioList.css
+++ b/src/components/PortfolioList/PortfolioList.css
@@ -5,7 +5,6 @@
 .portfolioSection {
   font-family: 'Open Sans', sans-serif;
   padding: 20px;
-  width: 100%;
   background-color: #f2f2f2;
 }
 
