--- a/src/components/SkillList/SkillList.css
+++ b/src/components/SkillList/SkillList.css
@@ -1,7 +1,6 @@
 
 .skillsSection {
   background-color: white;
-  width: 100%;
   padding: 20px;
   font-family: 'Open Sans', sans-serif;
 }
